# checkers

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml  test1.yml
checkers/: board.py  game.py  move.py
docs/checkers/: game.md  index.md  move.md
docs/checkers/ai/: index.md  random_ai.md
docs/checkers/checkers/: board.md  index.md
src/checkers/: __init__.py  board.py  game.py  move.py
src/checkers/ai/: __init__.py  random_ai.py
src/tests/: test_board.py  test_move.py
tests/: test_board.py  test_game.py  test_game_extra.py  test_move.py
tests/ai/: test_random_ai.py
