[options]
package = find:
package_dir=
    =src
python_requires = >=3.10
zip_safe = False
include_package_data = True

[options.packages.find]
where=src

[options.extras_require]
dev = 
    pytest==7.2.0
    flake8==6.0.0

[options.package_data]
example = data/schema.json, *.txt
* = README.rst